lib/_grammar.txt
program     -> formulae
formulae    -> literal | factor | term | unary | binary | reduce | group
literal     -> numeric | tensor | einsum

factor      -> '/' | '*'
term        -> '-' | '+'
unary       -> '-' literal
binary      -> literal (factor | term) literal
reduce      -> formulae ('|' mask)*
group       -> '(' formulae ')'

tensor      -> '[' (',' tensor | numeric)* ']'

einsum      -> quoted | function ',' parameters
quoted      -> '"' function '"'
function    -> input '->' output
input       -> dimension (',' dimension)*
output      -> dimension
dimension   -> alpha

parameters  -> range (, range)*
range       -> param (,  mask '|' )*
param       ->
    | '@' spec '<' spec_params '>'
    | '@' index '..' index
    | '@' index '..' numeric
    | '@' index '..' '[' (',' numeric)* ']'
    | literal
    | '[' (numeric ',')* ']'

mask        ->
    | 'zscore'
    | 'min' 
    | 'max' 
    | 'minmax' '<' numeric ',' numeric '>'
    | 'mean' 
    | 'log' 
    | 'sum' 
    | 'cumsum' 
    | 'sin' 
    | 'sinh' 
    | 'cos' 
    | 'cosh' 
    | 'tan' 
    | 'tanh' 
    | 'asin' 
    | 'asinh' 
    | 'atan' 
    | 'atanh' 
    | 'exp' 
    | 'sqrt'
    | 'softmax'
    | 'logsumexp'
    | 'inv' 
    | 'ceil'
    | 'floor'
    | 'stddev'
    | 'write' '<' index '>'
    | 'pow' '<' numeric '>' 
    | 'clip' '<' numeric ',' numeric '>'
    | 'reshape' '<' '[' (numeric ',')* ']' '>' 
    | 'slice' '<' '[' (((numeric)* ':' (numeric)* ':' (numeric)*) ',')* ']' '>'
    | 'axis'  '<' (numeric | 'row' | 'column') ',' (mask (',' '|' mask)*) '>'
    | 'draw'  '<' alpha ',' '[' numeric (',' numeric)? ']' ',' shapetype '>'
    | 'drawall'  '<' alpha ',' '[' numeric (',' numeric)? ']' ',' [ shapetype (',' shapetype)* ] '>'
    | 'plot' '<' alpha ',' '[' numeric (',' numeric)? ']' ',' plottype '>'

shapetype   ->
    | 'circle' keyvalue
    | 'rect'   keyvalue
    | 'box'    keyvalue
    | 'line'   keyvalue
    | 'text'   keyvalue
    | 'reset'

plottype    -> 
    | 'scatter' keyvalue

keyvalue    -> 
    '{' (alpha '=' (alpha | numeric))* '}'

spec    ->
    | "fill"
    | "eye"
    | "diag"
    | "zeros"
    | "ones"
    | "rand"
    | "alt"
    | "enum"

spec_params -> param_type*

param_type  ->
    | numeric
    | shape

shape       ->  numeric+
index       -> (alpha+) (numeric+)

alpha       -> a..zA..Z+
numeric     -> 0..9+
