lib/parser.ml
(*
 *   Copyright (C) Eincalc 2025. All Rights Reserved.
 *   For internal use only. Do not redistribute.
 *
 *   Copyright laws and international treaties protect this app. Unauthorized 
 *   redistribution of this app without express, written permission from our legal 
 *   department may entail severe civil or criminal penalties.
 *
 *)
(* TODO: Replace Format.sprintf|printf calls for smaller bundle size! *)
open Tokens;;
open Lexer;;

let (>>==) = Result.bind;;
let (let*) = Result.bind;;

module CharSet = Set.Make (Char);;

type einmatch = {
        label: char 
    ;   param: int
    ;   index: int 
    ;   dimen: int
    ;   outlc: int
} 
and eincomp = {
       shape: int list
    ;  elems: einmatch list
    ;  chset: CharSet.t      [@opaque]
    ;  param: crange
    ;  masks: mask list
} 
and eintree = {
        inps: eincomp list 
    ;   outs: (einmatch list option * int list * mask list) (* output matches, final shape and post execution masks *)
}
and lit     = 
    (* TODO: Does disjoint set make sense ?? *)
    (* evaluation of this mask is AFTER the parameter masks *)
    (* variable and its index along a mask list *)
    | Number  of (float) 
    | Tensor  of (crange)
    | EinSpec of (einsum * params * eintree option)
(* normal arithmetic operations *)
and shape = 
    | Shape  of ((char * int) list * mask list)
and unary = 
    | Negate 
    (*| Invert *)
and factor = 
    | Div 
    | Mul 
and term = 
    | Sub 
    | Add 
and referral = 
    | Self  (* the current cell *)
and call = 
    (* @diag<2.,4> creates a 4x4 matrix with 2 along the diagonal *)
    | Diag  of float * int  (* square matrix with diagonal values *) 
    (* @zeros<[x,y,...]>  shaped ndarray filled with zeros*)
    | Zeros of int list     (* zero init with a shape  *)
    (* @ones<[x,y,...]>  shaped ndarray filled with ones *)
    | Ones  of int list     (* ones init with a shape  *)
    (* @fill<x, [x,y,...]>  shaped ndarray filled with x *)
    | Fill  of float * int list (* fill shape with a certain value *)
    (* @enum<0,1,[4,3]> *)
    | Enum  of float * float * int list (* enumerate from minvalue and increment with a shape *)
    (* @random<bound, [x,y,...]>  shaped ndarray filled with random values between 0 and bound *)
    | Rand  of float * int list (* random with bound and shape *)
    (* @alt<[x,y,z,....], [x,y,...]>  shaped ndarray filled with alternating
       values from the first argument *)
    | Alt   of float list * int list (* alternate of values *)
and slice = 
    (* TODO: technically we only need Select, Along can be written in terms of
       select but its here for communication purposes - remove when necessary *)
    | Along  of int       (* index, - adds direction *)
    | Select of { 
            start: int option 
        ;   len:   int option 
        ;   skip:  int option
    }   (* start and length and skip *)
and props = (string, ttype) Hashtbl.t [@opaque]
and draw = 
    | Box    of props 
    | Circle of props
    | Line   of props
    | Text   of props
    | Clear
    | Reset
and plot = 
    | Line    of props
    | Bar     of props
    | Hist    of props
    | Pie     of props
    (* TODO: don't restrict to slices, maybe up a level to support axis or cell ranges
       directly - think this out *)
    | Scatter of { 
            slices: slice list list 
        ;   props: props
    }
and mask = 
    (* TODO: robust scaling and unit vector norm *)
    (* minmax<x,y> *)
    | MinMax of float * float     (* min max between a pair of values *)
    (* zscore *)
    | ZScore                      (* z-score normalization *)
    (* mean *)
    | Mean
    (* mode *)
    | Mode
    (* Sum *)
    | Sum
    (* Min value *)
    | Min
    (* Max value *)
    | Max
    (* cumulative sum *)
    | Cumsum
    (* logsumexp with beta *)
    | LogSumExp of float
    (* softmax with beta *)
    | Softmax of float
    (* apply a function *)
    | Map of (float -> float)
    (* stddev *)
    | Stddev
    (* reshape<[x,y,...]> *)
    | Reshape of int list
    (* write<A100> *)
    | Write   of cell             (* executes an effect to the grid *)           
    (* axis<'j', mean | ...> *)
    | Axis    of int * mask list  (* apply mask along an axis *)
    (* slice<[1, -1:10:3]> *)        
    | Slice   of slice list       (* slice an array - np slice syntax *)
    (*draw<handle, [height, width], [{...props},..]>*)
    | Draw    of { 
            handle: string 
        ;   bounds: int list (* only 1st 2 are accounted for *)
        ;   elmnts: draw list
    }
    (* plot<title, line<...>> *)
    | Plot    of { 
            handle: string
        ;   oftype: plot 
        ;   bounds: int list
    }
    (*| Binning *)
    (*| Unbox                     (* undo top dimension maybe by running a function over it ?? *) *)
    (*| Partition                 (* break into groups *) *)
    (*| Determ                    (* determinant *) *)
    (*| Rescale                   (* values add up to a certain num *)*)
    (*| Map *)
    (*| Reduce *)
and  cell    = string * int      (* Rows are strings, Columns are numbers *)
and  dimnsn  = shape             (* literal and its index *)
and  motion  =  
    | North of int (* ^ *)
    | South of int (* _ *)
    | East  of int (* > *)
    | West  of int (* < *)
and 'a ndarray = 
    | Itemize of 'a list          (* The columns *)
    | Collect of 'a ndarray list  (* The rows    *)
and  crange  = 
    | Range    of cell * cell     (* spreadsheet cells *)
    | Span     of cell * int list (* spreadsheet cell and a shape or length *)
    | Scalar   of cell
    | NdArray  of float ndarray
    | Relative of motion * crange (* Relative cell - Up ^, Down _, Left <, Right, > *)
    | Refer    of referral        (* a way to refer to the current cell *) 
    | Create   of call 
    (* Support masks that DONT copy over data  *)
    | Mask     of crange * mask list (* functional masks - copy over data *)
    | Void
and  params  = crange list       (* function parameters *)
and  einsum  = { 
        inp: dimnsn list         (* input.  should correspond to the number of params *)
    ;   out: dimnsn option       (* output - can be empty *)
}
and expr     = 
    | Literal  of lit
    | Factor   of factor
    | Term     of term
    | Unary    of unary * expr
    | Binary   of expr  * expr * expr
    | Reduce   of expr  * mask list
    | Grouping of expr 

(* TODO: Blocks can only have 1 inner expression and then enclose other blocks or expressions 
   We want to discourage long blocks. *)
and state = 
    {
        prog:   expr
    ;   inputs: crange list 
    ;   writes: (mask * int list) list (* mask and shape list, only Write<..> masks should be here *)
    ;   stamp:  float                  (* stamp *)
    }
and  formula = 
    (* 
       the program, 
       input dependencies (only Ranges and Spans from the grid)
       and 
       output dependencies (only Writes for now) from the grid 
    *)
    (*expr * crange list * mask list*)
    | Stmt of state
and  program = formula
[@@deriving show];;

type precedence = 
    | PrecNone 
    | PrecAssgn 
;;

type prattstate = {
        curr: lexeme  option
    ;   prev: lexeme  option
    ;   prog: program
} [@@deriving show];;

let einempty = { 
        inp = []
    ;   out = None
    ;
};;

let prattempty = {
    curr = None; prev = None; prog = Stmt { 
        prog=(Literal (EinSpec (einempty, [], None)))
        ; inputs=[]; writes=[]; stamp=(Unix.gettimeofday ())
    }
};;

type parseres = (program, string) result
type parsefn  = (prattstate -> parseres)

(*
 *let getrule tok = 
 *    rules.(ruleidx tok)
 *;;
*)

(* check current token without advancing state *)
let past tokn ({prev; _}) = 
    match prev with
    | None -> false 
    | Some { tokn=tok; _ } -> (equal_ttype tok tokn)
;;

(* check current token without advancing state *)
let check tokn ({curr; _}) = 
    match curr with
    | None -> false 
    | Some { tokn=tok; _ } -> (equal_ttype tok tokn)
;;

(* advancing to the next token *)
let advance (state, rem) = 
    match rem with 
    | [] -> 
        ({ state with prev=state.curr; curr=(None) }, rem)
    | hd :: rest -> 
        (*let _ = Format.printf "handled tok: %s\n" (show_lexeme (hd)) in*)
        (*let _ = Format.print_flush () in*)
        ({ state with prev=state.curr; curr=(Some hd) }, rest)
;;

let consume state tt  =
    (match (fst state).curr with
        | Some { tokn; _ } ->
            (if equal_ttype tokn tt then 
                (Ok (advance state)) 
             else
                (Error (Format.sprintf "Expected consume %s found %s" (show_ttype tt) (show_ttype tokn)))
            )
        | _ -> Error ("failed consumption check with bad termination expecting " ^ (show_ttype tt))
    )
;;

(* parse within an enclosed block like brackets, curly braces .... *)
let enclosed opentok closetok apply state = 
    (if check opentok (fst state) then 
        let nxt' = advance state in
        (>>==) (apply nxt') (fun (after, outcome) -> 
            (>>==) (consume after closetok) (fun final -> 
                Ok (final, outcome)
            )
        )
        else Error (Format.sprintf "missing opening enclose token (%s) found %s" (show_ttype opentok) 
        (show_prattstate (fst state)))
    )
;;

let current state = 
    (fst state).curr 
;;

let rec takenum state = 
    (match current state with 
    | Some ({ tokn=(TFloat v); _ }) -> 
        Ok ((TFloat v), (advance state)) 
    | Some ({ tokn=(TNumeral _v) as x; _ }) -> 
        Ok (x, (advance state))
    | Some ({ tokn=KMinus; _ }) -> 
        (let* (n, state') = takenum (advance state) in
            (match n with
            | TFloat v -> 
                Ok ((TFloat   (-1. *. v)), state')
            | TNumeral n -> 
                Ok ((TNumeral (-1 * n)), state')
            | _ -> 
                Error "invalid value in takenum"
            )
        )
    | _ -> 
        Error "invalid token when extracting number"
    )
;;

(* --- *)

(* valid strings are non empty ascii sequences *)
let validate word = 
    String.length word > 0 && String.is_valid_utf_8 word
;;

let parse_key_value state = 
    let prptbl = Hashtbl.create 8 in
    enclosed TOpenCurly TCloseCurly (fun state' -> 
        let rec collect cstate =
            (match current cstate with 
            | Some ({ tokn=(TAlphaNum key); _ }) -> 
                (>>==) (consume (advance cstate) TEq) (fun cstate' -> 
                    (match (current cstate') with 
                    | Some ({ tokn=(TCloseCurly); _ }) -> 
                        Error "missing key value"
                    | Some ({ tokn=KMinus; _}) ->
                        let* (num, after) = takenum cstate' in 
                        let _ = Hashtbl.add prptbl key num in 
                        collect after 
                    | Some ({ tokn; _ }) -> 
                        let _ = Hashtbl.add prptbl key tokn in 
                        collect (advance cstate')
                    | _ -> 
                        Error "terminated when parsing value for key"
                    )
                )
            | Some ({ tokn=(TComma);_ }) -> 
                collect (advance cstate)
            | Some ({ tokn=(TCloseCurly);_ }) -> 
                Ok ((cstate), prptbl)
            | _ -> 
                Error "bad termination when parsing key value, expected string key"
            )
        in 
        collect state'
    ) state 
;;

(* NB: inputs will be in reverse order of declaration! *)
let parse_ein_inp ein word ml = 
    { ein with 
        inp=(Shape (
            (List.of_seq @@ Seq.mapi (fun i c -> (c, i)) (String.to_seq word))
            , ml
        ) :: ein.inp) 
    } 
;;

let parse_ein_out ein word ml = 
    if validate word then  
        { ein with out=Some (Shape (
            (List.of_seq @@ Seq.mapi (fun i c -> (c, i)) (String.to_seq word))
            , ml
        )) } 
    else 
        { ein with out=None }
;;

(* ensure the order of inputs are symmetric to the declaration *)
let reorder ein = 
    { ein with inp=List.rev ein.inp; } 
;;
let as_cell w = 
    match Seq.find_index (fun c ->  Lexer.isDigit c) @@ String.to_seq w  with 
    | Some idx -> 
        let row = String.sub w 0 idx in
        let col = String.sub w idx (String.length w - idx) in
        ( match int_of_string_opt col with 
            | Some col'->  Ok (row, col')
            | None     ->  Error (Format.sprintf "Invalid row value - should be a number: %s" col)
        ) 
    | None -> 
        Error "Row index not found??"
;;

(* return consumed state + extracted numerals forming the array *)
let parse_static_array state = 
    let rec stack state' rows = 
        (* collect an entire row first *)
        (>>==) (collect state' []) (fun (after, toadd) -> 
            (
                (* check for more rows *)
                if check TComma (fst after) then
                    let next = advance after in
                    (
                        (* check if we are starting a new row *)
                        if check TLeftBracket (fst next) then
                            stack (advance next) (toadd :: rows)
                        (* check if it was just a trailing comma *)
                        else if check TRightBracket (fst next) then
                            Ok (advance next, (toadd :: rows))
                        (* weird state  *)
                        else 
                            Error (Format.sprintf "Unexpected token in stack: %s!" (show_prattstate (fst next)))
                    )
                else if check TRightBracket (fst after) then 
                    Ok (advance after, ((toadd :: rows)))
                else
                    Ok (after, (toadd :: rows))
            )
        )
    and collect state' numerals =  
        match (fst state').curr with
        | Some { tokn; _ } -> 
            (match tokn with
                | KMinus -> 
                    let* (num, after) = takenum state' in 
                    let _ = Format.printf "found num %s!\n" (show_ttype num) in
                    (match num with
                    | TFloat v   ->  
                        collect (after) (v :: numerals)
                    | TNumeral n ->
                        collect (after) ((float_of_int n) :: numerals)
                    | _ ->
                        Error "expected number in static array decl"
                    )
                | TFloat value ->  
                    collect (advance state') (value :: numerals)
                | TNumeral value ->  
                    collect (advance state') ((float_of_int value) :: numerals)
                | TComma -> 
                    (if past TComma (fst state') then
                        Error "Missing value between commas!"
                    else
                        collect (advance state') (numerals))
                | TLeftBracket -> 
                    (* collect remaining rows *)
                    (>>==) (stack (advance state') []) (fun (fin, blk) -> 
                        Ok (fin, Collect (List.rev blk))
                    )
                | TRightBracket -> 
                    Ok ((advance state'), (Itemize (List.rev numerals)))
                | n ->
                    Error (Format.sprintf "Unexpected token %s in static array - only floats supported" (show_ttype n))
            ) 
        | _ -> Error "Unexpected close - need static array"
    in (collect state [])
;;

let compass tokn motn = 
    match tokn with 
    | TLeftAngle  ->
        (West motn)
    | TRightAngle ->
        (East motn)
    | TCaret      ->
        (North motn)
    | TUnderscore -> 
        (South motn)
    | _ -> 
        failwith "invalid token in compass"
;;

let parse_extract_slice_indices state = 
    let rec collect_rem next p = 
        (match (fst next).curr with 
            | Some { tokn; _ } -> 
                (match tokn with
                    | TComma -> 
                        collect_rem (advance next) p
                    | TNumeral start -> 
                        let next' = advance next in 
                        (if check TColon (fst next') then 
                            let next = advance next' in 
                            (match (fst next).curr with
                                | Some ({ tokn =TNumeral len; _ }) -> 
                                    let next = advance next in 
                                    (if check TColon (fst next) then 
                                        let next = advance next in 
                                        (match (fst next).curr with
                                            | Some ({ tokn =TNumeral skip; _ }) -> 
                                                collect_rem (advance next) ((
                                                    Select { 
                                                        start=Some start;
                                                        len  =Some len;
                                                        skip =Some skip;
                                                    }
                                                ) :: p)
                                            | _ -> 
                                                collect_rem (next) ((
                                                    Select { 
                                                        start=Some start;
                                                        len  =Some len;
                                                        skip =None;
                                                    }
                                                ) :: p)
                                        ) 
                                        else  
                                            collect_rem (next) ((
                                                Select { 
                                                    start=Some start;
                                                    len  =Some len;
                                                    skip =None;
                                                }
                                            ) :: p)
                                    )
                                | Some ({ tokn=TComma; _ }) -> 
                                    collect_rem (advance next) ((
                                        Select { 
                                            start=(Some start);  
                                            len=None;
                                            skip=None;
                                        }
                                    ) :: p)
                                | Some ({ tokn=TColon; _ }) -> 
                                    let next = advance next in 
                                    (match (fst next).curr with 
                                        | Some ({ tokn=(TNumeral skip); _ }) -> 
                                            collect_rem (advance next) ((
                                                Select { 
                                                    start=(Some start);  
                                                    len  = None;
                                                    skip =(Some skip);
                                                }
                                            ) :: p)
                                        | Some ({ tokn=(TComma); _ }) -> 
                                            collect_rem (advance next) ((
                                                Select { 
                                                    start=(Some start);  
                                                    len  = None;
                                                    skip =(None);
                                                }
                                            ) :: p)
                                        | Some _ -> 
                                            collect_rem (next) ((
                                                Select { 
                                                    start=(Some start);  
                                                    len  = None;
                                                    skip =(None);
                                                }
                                            ) :: p)
                                        | None -> 
                                            Error "bad slice structure termination"
                                    )
                                | _ -> 
                                    collect_rem next ((
                                        Select { 
                                            start=(Some start);  
                                            len  = None;
                                            skip =(None);
                                        }
                                    ) :: p)
                            )
                            else 
                                collect_rem next' ((Along start) :: p)
                        )
                    | TColon -> 
                        let next = advance next in 
                        (match (fst next).curr with
                            | Some ({ tokn =TNumeral len; _ }) -> 
                                let next = advance next in 
                                (if check TColon (fst next) then 
                                    let next = advance next in 
                                    (match (fst next).curr with
                                        | Some ({ tokn =TNumeral skip; _ }) -> 
                                            collect_rem (advance next) ((
                                                Select { 
                                                    start=None;
                                                    len  =Some len;
                                                    skip =Some skip;
                                                }
                                            ) :: p)
                                        | _ -> 
                                            collect_rem (next) ((
                                                Select { 
                                                    start=None;
                                                    len  =Some len;
                                                    skip =None;
                                                }
                                            ) :: p)
                                    ) 
                                    else  
                                        collect_rem (next) ((
                                            Select { 
                                                start=None;
                                                len  =Some len;
                                                skip =None;
                                            }
                                        ) :: p)
                                )
                            | Some ({ tokn=TComma; _ }) -> 
                                collect_rem (advance next) ((
                                    Select { 
                                        start=None;  
                                        len=None;
                                        skip=None;
                                    }
                                ) :: p)
                            | Some ({ tokn=TColon; _ }) -> 
                                let next = advance next in 
                                (match (fst next).curr with 
                                    | Some ({ tokn=(TNumeral skip); _ }) -> 
                                        collect_rem (advance next) ((
                                            Select { 
                                                start=(None);  
                                                len  = None;
                                                skip =(Some skip);
                                            }
                                        ) :: p)
                                    | Some ({ tokn=(TComma); _ }) -> 
                                        collect_rem (advance next) ((
                                            Select { 
                                                start=(None);  
                                                len  = None;
                                                skip =(None);
                                            }
                                        ) :: p)
                                    | _ -> 
                                        collect_rem (next) ((
                                            Select { 
                                                start=(None);  
                                                len  = None;
                                                skip =(None);
                                            }
                                        ) :: p)
                                )
                            | _ -> 
                                Error "bad slice arg"
                        )
                    | TRightBracket -> 
                        (* exit condition - leave as is to match it in enclose calls *)
                        Ok (next, (List.rev p))
                    |  _ -> Error ("bad slice value: negative slices not currently supported ")
                )
            | None -> 
                (Error "malformed slice specification?")
        )
    in collect_rem state [ ]
;;

let parse_extract_range state = 
    let* (num, after) = takenum state in
    match num with 
    | TNumeral v ->  
        let rec collect_rem state' p  = 
            (*let next = advance state' in*)
            (match (fst state').curr with 
                | Some { tokn; _ } -> 
                    (match tokn with
                        | TComma -> 
                            collect_rem (advance state') p
                        | TNumeral n -> 
                            collect_rem (advance state') ((float_of_int n) :: p)
                        | TFloat f -> 
                            collect_rem (advance state') ((f) :: p)
                        | TRightBracket -> 
                            (* exit condition *)
                            Ok (advance state', (List.rev p))
                        |  KMinus -> 
                            let* (num, after) = takenum state' in 
                            (match num with 
                            | TFloat v -> 
                                collect_rem (after) ((v) :: p)
                            | TNumeral v -> 
                                collect_rem (after) ((float_of_int v) :: p)
                            | _ -> 
                                Error ("bad value!")
                            )
                        |  _ -> Error ("bad termination")
                    )
                | None -> 
                    Error ("Unterminated")
            )
        in collect_rem after [ (float_of_int v) ]
    | TFloat v   ->  
        let rec collect_rem state' p  = 
            (*let next = advance state' in*)
            (match (fst state').curr with 
                | Some { tokn; _ } -> 
                    (match tokn with
                        | TComma -> 
                            collect_rem (advance state') p
                        | TNumeral n -> 
                            collect_rem (advance state') ((float_of_int n) :: p)
                        | TFloat f -> 
                            collect_rem (advance state') (f :: p)
                        | TRightBracket -> 
                            (* exit condition *)
                            Ok (advance state', (List.rev p))
                        |  KMinus -> 
                            let* (num, after) = takenum state' in 
                            (match num with 
                            | TFloat v -> 
                                collect_rem (after) ((v) :: p)
                            | TNumeral v -> 
                                collect_rem (after) ((float_of_int v) :: p)
                            | _ -> 
                                Error ("bad value!")
                            )
                            (*Error ("negative shapes not feasible!")*)
                        |  _ -> Error ("bad termination")
                    )
                | None -> 
                    Error ("Unterminated")
            )
        in collect_rem after [ v ]
    | _ -> 
        (Error "expected number in extraction")
;;

(* FIXME: replace parse_extract_shape with this one - requires handling the exit
   condition differently - likely with an enclose! *)
let parse_extract_shape_override state = 
    match (fst state).curr with
    | Some { tokn;_ } -> 
        (
            match tokn with 
            | TNumeral v ->  
                let rec collect_rem state' p  = 
                    let next = advance state' in
                    (match (fst next).curr with 
                        | Some { tokn; _ } -> 
                            (match tokn with
                                | TComma -> 
                                    collect_rem next p
                                | TNumeral n -> 
                                    collect_rem (next) (n :: p)
                                | TFloat _f -> 
                                    Error ("only numerals allowed in shape")
                                | TRightBracket -> 
                                    (* exit condition *)
                                    Ok (next, (List.rev p))
                                |  _ -> Error ("bad termination")
                            )
                        | None -> 
                            Error ("Unterminated")
                    )
                in collect_rem state [ v ]
            | TFloat f ->  
                let v = int_of_float f in
                let rec collect_rem state' p  = 
                    let next = advance state' in
                    (match (fst next).curr with 
                        | Some { tokn; _ } -> 
                            (match tokn with
                                | TComma -> 
                                    collect_rem next p
                                | TNumeral n -> 
                                    collect_rem (next) (n :: p)
                                | TFloat _f -> 
                                    collect_rem (next) ((int_of_float _f) :: p)
                                | TRightBracket -> 
                                    (* exit condition *)
                                    Ok (next, (List.rev p))
                                |  _ -> Error ("bad termination")
                            )
                        | None -> 
                            Error ("Unterminated")
                    )
                in collect_rem state [ v ]
            | t -> 
                Error (Format.sprintf "the shapes|bounds can only be natural number (>= 0): found %s" (show_ttype t))
        )
    | _ -> 
        (Error "expected number in extraction")
;;

(** DEPRECATED **)
let parse_extract_shape state = 
    match (fst state).curr with
    | Some { tokn;_ } -> 
        (
            match tokn with 
            | TNumeral v ->  
                let rec collect_rem state' p  = 
                    let next = advance state' in
                    (match (fst next).curr with 
                        | Some { tokn; _ } -> 
                            (match tokn with
                                | TComma -> 
                                    collect_rem next p
                                | TNumeral n -> 
                                    collect_rem (next) (n :: p)
                                | TFloat _f -> 
                                    Error ("only numerals allowed in shape")
                                | TRightBracket -> 
                                    (* exit condition *)
                                    Ok (advance next, (List.rev p))
                                |  KMinus -> Error ("negative size shapes not feasible!")
                                |  _ -> Error ("bad termination")
                            )
                        | None -> 
                            Error ("Unterminated")
                    )
                in collect_rem state [ v ]
            | TFloat f ->  
                let v = int_of_float f in
                let rec collect_rem state' p  = 
                    let next = advance state' in
                    (match (fst next).curr with 
                        | Some { tokn; _ } -> 
                            (match tokn with
                                | TComma -> 
                                    collect_rem next p
                                | TNumeral n -> 
                                    collect_rem (next) (n :: p)
                                | TFloat _f -> 
                                    collect_rem (next) ((int_of_float _f) :: p)
                                | TRightBracket -> 
                                    (* exit condition *)
                                    Ok (advance next, (List.rev p))
                                |  KMinus -> Error ("negative size shapes not feasible!")
                                |  _ -> Error ("bad termination")
                            )
                        | None -> 
                            Error ("Unterminated")
                    )
                in collect_rem state [ v ]
            | _ -> 
                (Error "the shapes can only be natural number (>= 0)")
        )
    | _ -> 
        (Error "expected number in extraction")
;;

let parse_param_data _start next = 
    (if check TRange (fst next) then (
        let next' = advance next in 
        match current next' with 
        | Some { tokn; _ } ->  
            (match tokn with
                (* A1..B2 *)
                | TAlphaNum _end ->  
                    (>>==) (as_cell _start) (fun scell -> 
                        (>>==) (as_cell _end) (fun ecell -> 
                            Ok (advance next', Range (scell, ecell))
                        )
                    )
                (* A1..[100,200,...] [row, column] *)
                | TLeftBracket -> 
                    (>>==) (enclosed TLeftBracket TRightBracket (parse_extract_shape_override) next') 
                        (fun (final, shp) -> 
                            (>>==) (as_cell _start) (fun scell -> 
                                match shp with 
                                | [] -> 
                                    Ok (final, Span (scell, shp))
                                | x :: [] -> 
                                    Ok (final, Span (scell, [x;1]))
                                | _ -> 
                                    Ok (final, Span (scell, shp))
                            )
                        )
                (* A1..100 along a row *) 
                | TNumeral row -> 
                    if row < 0 then Error "Must be positive sized number in range"
                    else
                    (>>==) (as_cell _start) (fun scell -> 
                        Ok ((advance next'), Span (scell, [1; row]))
                    )
                | _ -> 
                    Error "Expected range end"
            )
        | _            -> 
            Error "Unclosed range"
    ) else (
            (* no range token  - maybe single cell*)
            (>>==) (as_cell _start) (fun y -> 
                Ok (next,  Scalar y)
            )
        )
    )
;;

let parse_ones_reference state = 
    let next = advance state in 
    (match (fst next).curr with 
        | Some { tokn; _ } -> 
            (match tokn with
                | TLeftAngle -> 
                    let after = advance next in 
                    (match (fst after).curr with
                        | Some { tokn; _ } -> 
                            (match tokn with 
                                | TLeftBracket -> 
                                    (>>==) (parse_extract_shape (advance after)) (fun (after', shp) -> 
                                        (>>==) (consume after' TRightAngle) (fun final -> 
                                            Ok (final, Create (Ones shp))
                                        )
                                    )
                                | _ -> 
                                    Error "Expected shape spec"
                            )
                        | _ ->
                            Error "Missing shape spec"
                    )
                | _ -> 
                    Error ("Expected shape spec in angle brackets")
            )
        | None -> 
            Error ("Expected shape spec")
    )
;;

let parse_zeros_reference state = 
    let next = advance state in 
    (match (fst next).curr with 
        | Some { tokn; _ } -> 
            (match tokn with
                | TLeftAngle -> 
                    let after = advance next in 
                    (match (fst after).curr with
                        | Some { tokn; _ } -> 
                            (match tokn with 
                                | TLeftBracket -> 
                                    (>>==) (parse_extract_shape (advance after)) (fun (after', shp) -> 
                                        (>>==) (consume after' TRightAngle) (fun final -> 
                                            Ok (final, Create (Ones shp))
                                        )
                                    )
                                | _ -> 
                                    Error "Expected shape spec"
                            )
                        | _ ->
                            Error "Missing shape spec"
                    )
                | _ -> 
                    Error ("Expected shape spec in angle brackets")
            )
        | None -> 
            Error ("Expected shape spec")
    )
;;

let parse_alt_reference state = 
    let next = advance state in 
    (match (fst next).curr with 
        | Some { tokn; _ } -> 
            (match tokn with
                | TLeftAngle -> 
                    let after = advance next in 
                    (match (fst after).curr with
                        | Some { tokn; _ } -> 
                            (match tokn with 
                                | TLeftBracket -> 
                                    (>>==) (parse_extract_range (advance after)) (fun (after', slc) -> 
                                        (>>==) (consume after' TComma) (fun final -> 
                                            (>>==) (parse_extract_shape (advance final)) (fun (after', shp) -> 
                                                (>>==) (consume after' TRightAngle) (fun final -> 
                                                    Ok (final, Create (Alt (slc, shp)))
                                                ) 
                                            )
                                        )
                                    )
                                | _ -> 
                                    Error "Expected shape spec"
                            )
                        | _ ->
                            Error "Missing shape spec"
                    )
                | _ -> 
                    Error ("Expected shape spec in angle brackets")
            )
        | None -> 
            Error ("Expected shape spec")
    )
;;

let parse_fill_reference state = 
    let next = advance state in 
    (match (fst next).curr with 
        | Some { tokn; _ } -> 
            (match tokn with
                | TLeftAngle -> 
                    (>>==) (takenum (advance next)) (fun (tok, next')-> 
                        match tok with 
                        | TFloat fval -> 
                            (>>==) (consume next' TComma) (fun after -> 
                                (match (fst after).curr with
                                    | Some { tokn; _ } -> 
                                        (match tokn with 
                                            | TLeftBracket -> 
                                                (>>==) (parse_extract_shape (advance after)) (fun (after', shp) -> 
                                                    (>>==) (consume after' TRightAngle) (fun final -> 
                                                        Ok (final, Create (Fill (fval, shp)))
                                                    )
                                                )
                                            | _ -> 
                                                Error (Format.sprintf "Expected shape spec, found: %s" (show_ttype tokn)))
                                    | _ ->
                                        Error "Expected shape filling spec"
                                )
                            )
                        | TNumeral ival -> 
                            let fval = float_of_int ival in
                            (>>==) (consume next' TComma) (fun after -> 
                                (match (fst after).curr with
                                    | Some { tokn; _ } -> 
                                        (match tokn with 
                                            | TLeftBracket -> 
                                                (>>==) (parse_extract_shape (advance after)) (fun (after', shp) -> 
                                                    (>>==) (consume after' TRightAngle) (fun final -> 
                                                        Ok (final, Create (Fill (fval, shp)))
                                                    )
                                                )
                                            | _ -> 
                                                Error "Expected shape spec"
                                        )
                                    | _ ->
                                        Error "Expected shape fill spec"
                                )
                            )
                        | _ -> 
                            Error "Expected fill value as float"
                    )
                | _ -> 
                    Error ("Expected shape spec in angle brackets")
            )
        | None -> 
            Error ("Expected shape spec")
    )
;;
